fix(ARC-2084): fix header navigation on tablet and mobile
https://meemoo.atlassian.net/browse/ARC-2084

--- a/src/modules/shared/layouts/AppLayout/AppLayout.module.scss
+++ b/src/modules/shared/layouts/AppLayout/AppLayout.module.scss
@@ -1,3 +1,5 @@
+@use "src/styles/abstracts" as *;
+
 .l-app {
 	> :global(.c-navigation) {
 		width: 100%;
@@ -8,4 +10,10 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+}
+
+.c-navigation_section--right__language-switcher__desktop {
+	@include respond-to(xxl) {
+		display: none;
+	}
 }
